[project]
name = "comments-analytics-tracker-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "praw",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "pydantic",
    "httpx",
    "supabase",
    "openpyxl",
    "gspread",
    "google-auth",
    "ipykernel>=7.2.0",
    "pandas>=3.0.3",
    "git-filter-repo>=2.47.0",
]
